[gd_scene load_steps=3 format=3 uid="uid://bwfmah13oq5ef"]

[ext_resource type="Script" path="res://classes/hand_2d.gd" id="1_6troi"]

[sub_resource type="Curve2D" id="Curve2D_h8gcq"]
_data = {
"points": PackedVector2Array(-672.584, 106.173, 672.584, -106.173, -848, 83, -748.644, -111.291, 748.644, 111.291, 853, 75)
}
point_count = 2

[node name="Hand" type="Node2D"]
script = ExtResource("1_6troi")
max_hand_size = 7

[node name="DisplayPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_h8gcq")

[node name="SelectTimer" type="Timer" parent="."]
one_shot = true

[node name="SelectBar" type="ProgressBar" parent="."]
z_index = 2
offset_left = -279.0
offset_top = 122.0
offset_right = 286.0
offset_bottom = 171.0

[node name="ExecuteTurnButton" type="Button" parent="."]
z_index = 2
offset_left = 323.0
offset_top = 86.0
offset_right = 541.0
offset_bottom = 174.0
text = "Dance!"

[connection signal="timeout" from="SelectTimer" to="." method="_on_select_timer_timeout"]
